--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -83,9 +83,9 @@
         }
 
         th {
-          background-color: #f2f2f2;
+          background-color: #baae79;
         }
 
         tr:nth-child(even) {
-          background-color: #f2f2f2;
+          background-color: #e3f7e1;
         }
