--- a/src/main/resources/templates/blogs/add-blog.html
+++ b/src/main/resources/templates/blogs/add-blog.html
@@ -26,19 +26,19 @@
             <form method="POST" th:action="@{/blog-save}" th:object="${blog}">
                 <div class="form-group">
                     <label for="title">Blog Title</label>
-                    <input class="form-control" id="title" placeholder="Enter Blog Title" th:field="*{title}" type="text">
+                    <input class="form-control" id="title" placeholder="Enter Blog Title" required th:field="*{title}" type="text">
                 </div>
                 <div class="form-group">
                     <label for="topic">Topic</label>
-                    <input class="form-control" id="topic" placeholder="Enter Topic of This Blog" th:field="*{topic}" type="text">
+                    <input class="form-control" id="topic" placeholder="Enter Topic of This Blog" required th:field="*{topic}" type="text">
                 </div>
                 <div class="form-group">
                     <label for="author">Author</label>
-                    <input class="form-control" id="author" placeholder="Enter Author Name"  th:field="*{author}" type="text">
+                    <input class="form-control" id="author" placeholder="Enter Author Name"  required th:field="*{author}" type="text">
                 </div>
                 <div class="form-group">
                     <label for="description">Blog Description</label>
-                    <textarea class="form-control" id="description" placeholder="Enter Blog Description" rows="5" th:field="*{description}"></textarea>
+                    <textarea class="form-control" id="description" placeholder="Enter Blog Description" required rows="5" th:field="*{description}"></textarea>
                 </div>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
