--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -74,6 +74,14 @@
       </form>
     </div>
   </div>
+  <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;" th:if="${error}">
+    <div class="toast-header bg-dark">
+      <strong class="mr-auto text-white">Error</strong>
+      <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+    </div>
+    <div class="toast-body bg-danger text-white" th:text="${error}"></div>
+  </div>
+
 </main>
 <!-- Footer -->
 <div th:replace="fragments/footer :: footer"></div>
@@ -82,5 +90,16 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- Script to activate Bootstrap Toast -->
+<script>
+  $(document).ready(function () {
+      $('.toast').toast({
+          autohide: true,
+          delay: 5000, // 5 seconds
+          animation: true,
+          position: 'top-end'
+      }).toast('show');
+  });
+</script>
 </body>
 </html>
