--- a/src/main/resources/templates/blogs/blog-details.html
+++ b/src/main/resources/templates/blogs/blog-details.html
@@ -25,12 +25,13 @@
             <h2 class="card-title" th:text="${blog.title}"></h2>
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-text">Topic: <span th:text="${blog.topic}"></span></h4>
-                    <h6 class="card-text">Author: <span th:text="${blog.author}"></span> </h6>
                     <hr>
                     <p class="card-text text-justify" th:text="${blog.description}"></p>
-
+                    <hr>
+                    <h4 class="card-text">Topic: <span th:text="${blog.topic}"></span></h4>
+                    <h6 class="card-text">Author: <span th:text="${blog.author}"></span> </h6>
                     <h6 class="card-text">Published Date: <span th:text="${blog.publishedDate}"></span> </h6>
+                    <h6 class="card-text">Updated Date: <span th:text="${blog.updatedDate}"></span> </h6>
                 </div>
             </div>
             <a class="mt-3" th:href=@{/show-blog-list}>Back to Blogs</a>
