--- a/src/main/resources/templates/discussions/update-comment.html
+++ b/src/main/resources/templates/discussions/update-comment.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Query Details-MHSN</title>
+    <title>Update Comment-MHSN</title>
 
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +52,7 @@
                                    th:href="@{/show-update-comment-page(commentId=${comment.id}, discussionId=${discussion.id})}">
                                     Update
                                 </a>
-                            </span>
+                        </span>
                         <span th:if="${(isUser != null and !#strings.isEmpty(isUser) and isUser and comment.user.id == userId)
                                             or (isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin)}">
                                 <a class="btn btn-danger btn-sm" role="button"
@@ -74,14 +74,15 @@
                      or (isTherapist != null and !#strings.isEmpty(isTherapist) and isTherapist)
                      or (isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin)}">
                     <div class="mt-3">
-                        <h4>Add New Comment</h4>
-                        <form method="POST" th:action="@{/comment-save(discussionId=${discussion.id})}"
-                              th:object="${newComment}">
+                        <h4>Update Your Comment</h4>
+                        <form method="POST" th:action="@{/comment-update(discussionId=${discussion.id})}"
+                              th:object="${commentToUpdate}">
                             <div class="form-group">
                                 <label for="commentContent">Comment Here:</label>
                                 <textarea class="form-control" id="commentContent" required rows="3"
                                           th:field="*{commentContent}"></textarea>
                             </div>
+                            <input th:field="*{id}" type="hidden"/>
                             <button class="btn btn-primary" type="submit">Submit</button>
                         </form>
                     </div>
