--- a/src/main/resources/templates/blogs/blog-list.html
+++ b/src/main/resources/templates/blogs/blog-list.html
@@ -9,7 +9,6 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css" rel="stylesheet">
-
     <link href="css/styles.css" rel="stylesheet">
 
 </head>
@@ -31,13 +30,13 @@
                 <a class="btn btn-success mb-3" th:href="@{/show-add-blog-page}">Add New Blog</a>
             </div>
             <div class="table-responsive">
-                <table class="table table-bordered table-fixed table-striped"  id="table">
+                <table class="table table-bordered table-fixed table-striped" id="table">
                     <thead>
                     <tr>
                         <th class="text-center">Blog Title</th>
                         <th class="text-center">Topic</th>
                         <th class="text-center">Author</th>
-                        <th class="text-center">Action</th>
+                        <th class="text-center" style="width: 200px;">Action</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -45,12 +44,13 @@
                         <td class="text-left" th:text="${blog.title}"/>
                         <td class="text-left" th:text="${blog.topic}"/>
                         <td class="text-left" th:text="${blog.author}"/>
-                        <td class="text-center" style="width: 200px;">
+                        <td class="text-center">
                             <a class="btn btn-info" role="button" th:href="@{/show-blog-details(id=${blog.id})}">
                                 <i class="fas fa-eye"></i> <!-- View icon -->
                             </a>
                             <span th:if="${isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin}">
-                                <a class="btn btn-warning" role="button" th:href="@{/show-update-blog-page(id=${blog.id})}">
+                                <a class="btn btn-warning" role="button"
+                                   th:href="@{/show-update-blog-page(id=${blog.id})}">
                                     <i class="fas fa-edit"></i> <!-- Edit icon -->
                                 </a>
                             </span>
@@ -78,7 +78,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.js" type="text/javascript"></script>
-
 
 
 <script>
