--- a/src/main/resources/templates/discussions/discussion-list.html
+++ b/src/main/resources/templates/discussions/discussion-list.html
@@ -35,9 +35,9 @@
                     <thead>
                     <tr>
                         <th class="text-center">Query Topic</th>
-                        <th class="text-center">Inquirer Name</th>
-                        <th class="text-center">Inquirer's Gender</th>
-                        <th class="text-center">Action</th>
+                        <th class="text-center" style="width: 150px;">Inquirer Name</th>
+                        <th class="text-center" style="width: 150px;">Inquirer's Gender</th>
+                        <th class="text-center" style="width: 200px;">Action</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -45,7 +45,7 @@
                         <td class="text-left" th:text="${discussion.queryTopic}"/>
                         <td class="text-left" th:text="${discussion.inquirerName}"/>
                         <td class="text-left" th:text="${discussion.inquirerGender}"/>
-                        <td class="text-center" style="width: 200px;">
+                        <td class="text-center">
                             <a class="btn btn-info" role="button"
                                th:href="@{/show-discussion-details(id=${discussion.id})}">
                                 <i class="fas fa-eye"></i> <!-- View icon -->
@@ -58,7 +58,8 @@
                             </span>
                             <span th:if="${(isUser != null and !#strings.isEmpty(isUser) and isUser and discussion.user.id == userId)
                                             or (isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin)}">
-                                <a class="btn btn-danger" role="button" th:href="@{/discussion-delete(id=${discussion.id})}">
+                                <a class="btn btn-danger" role="button"
+                                   th:href="@{/discussion-delete(id=${discussion.id})}">
                                     <i class="fas fa-trash-alt"></i> <!-- Delete icon -->
                                 </a>
                             </span>
