--- a/src/main/resources/templates/videos/add-video.html
+++ b/src/main/resources/templates/videos/add-video.html
@@ -23,22 +23,29 @@
     <div class="container">
         <div class="pt-3">
             <h1>Add New Video</h1>
-            <form action="/submit-video" enctype="multipart/form-data" method="post">
+            <form enctype="multipart/form-data" method="POST" th:action="@{/video-save}" th:object="${video}">
                 <div class="form-group">
                     <label for="videoTopic">Video Topic</label>
-                    <input class="form-control" id="videoTopic" name="videoTopic" placeholder="Enter Video Topic" required type="text">
+                    <input class="form-control" id="videoTopic" placeholder="Enter Video Topic" required
+                           th:field="*{videoTopic}" type="text">
                 </div>
                 <div class="form-group">
                     <label for="producerName">Producer Name</label>
-                    <input class="form-control" id="producerName" name="producerName" placeholder="Enter Producer Name" required type="text">
+                    <input class="form-control" id="producerName" placeholder="Enter Producer Name"
+                           required
+                           th:field="*{producerName}" type="text">
                 </div>
                 <div class="form-group">
                     <label for="duration">Duration (in minutes)</label>
-                    <input class="form-control" id="duration" name="duration" placeholder="Enter Duration" required type="number">
+                    <input class="form-control" id="duration" placeholder="Enter Duration in minutes"
+                           th:field="*{duration}"
+                           type="number">
                 </div>
                 <div class="form-group">
-                    <label for="videoFile">Video File</label>
-                    <input accept=".mp3, .wav" class="form-control-file" id="videoFile" name="videoFile" required type="file">
+                    <label for="file">Video File</label>
+                    <input accept=".mp4, .mov, .avi, .wmv, .flv" class="form-control-file" id="file"
+                           name="file" onchange="validateFileSize(this)" required type="file">
+
                 </div>
                 <button class="btn btn-primary" type="submit">Submit</button>
                 <a class="btn btn-secondary ml-2" th:href="@{/show-video-list}">Cancel</a>
@@ -54,5 +61,14 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+    function validateFileSize(input) {
+    const maxSize = 10 * 1024 * 1024; // 10MB
+    if (input.files.length > 0 && input.files[0].size > maxSize) {
+        alert('The file exceeds the maximum size of 10MB. Please choose a smaller file.');
+        input.value = ''; // Clear the file input
+    }
+}
+</script>
 </body>
 </html>
