--- a/src/main/resources/templates/discussions/update-discussion.html
+++ b/src/main/resources/templates/discussions/update-discussion.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="pt-3">
             <h1>Update Your Query</h1>
-            <form method="POST" th:action="@{/discussion-save}" th:object="${discussion}">
+            <form method="POST" th:action="@{/discussion-update}" th:object="${discussion}">
                 <div class="form-group">
                     <label for="queryTopic">Query Topic:</label>
                     <input class="form-control" id="queryTopic" placeholder="Enter Query Topic" required
@@ -49,7 +49,9 @@
                               rows="5" th:field="*{queryDescription}"></textarea>
                 </div>
                 <input th:field="*{id}" type="hidden"/>
-
+                <input th:field="*{queryDate}" type="hidden" th:value="${#dates.format(discussion.queryDate, 'yyyy-MM-dd')}"/>
+                <input th:field="*{user}" type="hidden"/>
+                <input th:field="*{commentList}" type="hidden"/>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
         </div>
